# pyds-app

./: .bandit  .gitignore  .vulture  CLAUDE.md  README.md  TODO-mini.md  TODO.md  main.py  pyproject.toml
.claude/commands/: execute-prp.md  generate-prp.md
.github/chatmodes/: pythoner.chatmode.md  rustacean.chatmode.md
.github/workflows/: security-scan.yml  static-analysis.yml
PRPs/: comprehensive-static-analysis-system.md  robust-deepstream-inference-system.md  standalone-video-analytics-script.md  vision-deepstream-python-implementation.md
analysis/baselines/: vulture-whitelist.py
analysis/rules/: async-patterns.yml  deepstream-security.yml  gstreamer-safety.yml
configs/: default.yaml  development.yaml  production.yaml  testing.yaml
docs/: user-guide.md
examples/: basic_detection.py  multi_source_rtsp.py
script/: Dockerfile  README.md  config.yaml  docker-compose.yml  requirements.txt  test_implementation.py  test_sources.json  video_analytics.py  video_analytics_script.py
script/models/: yolo_config.txt
scripts/: benchmark_performance.py  coverage-analysis.py  security-scan.py  setup-analysis.py  setup_environment.py  static-analysis.py
src/: __init__.py  app.py  config.py
src/alerts/: __init__.py  handlers.py  manager.py  throttling.py
src/detection/: __init__.py  custom.py  engine.py  models.py  strategies.py
src/monitoring/: __init__.py  health.py  metrics.py  profiling.py
src/pipeline/: __init__.py  elements.py  factory.py  manager.py  sources.py
src/utils/: __init__.py  async_utils.py  deepstream.py  errors.py  logging.py
tests/: __init__.py  conftest.py  test_config.py  test_detection.py  test_pipeline.py
